Fix some minor logic